# AltSTU_repo

./: .gitignore  4_sem_types_and_structures_of_data.lnk  README.md  UseR.lnk  push-pull-PC-Notebook.bat  push-pull-PC.bat  экз.docx
2_sem_History/: tema5.ppt  сам раб3.docx
2_sem_MatAn/: IDZ-Prilozh-proizv-PI.docx  IDZ_lin-algebra_PI-2019.doc  IDZ_lin-prostr_PI-2019.doc  Kontr_proizvodnye_domashnij-variant.doc  Shulpov_PI-92_IDZ_may11.docx  ~$Z_lin-prostr_PI-2019.doc  ФУНКЦИИ_нескольких,перменных.DOC
2_sem_Programming/: Projects.lnk  source VS19.lnk
3_sem_Economic/: EKONOMIKA_algoritm-resheniya-zadach_20.docx  EKONOMIKA_konspekty-lekcij_20.docx  practice7_Shulpov.docx  tema4_____________.doc  tema5.doc
3_sem_English/: Shulpov_PI-92_.21may.docx  Shulpov_PI-92_01_sep.docx  Shulpov_PI-92_07may.doc  Stupid-Robbery.doc  UNIT-6.doc
3_sem_OOP/: lec1.doc  lec3.doc  lec4.doc  lec7.doc  lec8.doc  ~$lec6.doc  ~$lec7.doc
3_sem_Physics/: памятка_по_дисциплине_физика_2курс_1семестр.doc
3_sem_Speech_сulture_and_business_communications/: Control question 4.docx  Control question 5.docx  Normy ORD.docx  Zadanie (technique for asking questions) .docx
3_sem_integral_and_diff/: Ответы1.docx  Ответы3.docx  формулы.docx
7_sem/Computer-graphics__Andreeva/lab2/Graphic-master/: CMakeLists.txt  Window.cpp  Window.h  figure.cpp  figure.h  main.cpp
7_sem/Computer-graphics__Andreeva/lab2/Graphic-master/core/: Matrix.hpp  MatrixTransform.hpp  Vector3D.hpp  Vector4D.hpp
7_sem/Computer-graphics__Andreeva/lab2/Graphic-master/tests/: CMakeLists.txt  Matrix_Test.cpp  Transform_Test.cpp
(+848 files in other folders)
